<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="app_name">游乐游戏中心</string>
    <string name="net_error">网络错误，请稍后重试</string>
    <string name="classify">分类</string>
    <string name="home_page">首页</string>
    <string name="ranking">排行</string>
    <string name="country">社区</string>
    <string name="person">个人</string>
    <string name="left_manager">管理</string>
    <string name="left_game_manager">游戏管理</string>
    <string name="left_gift_bag">我的礼包</string>
    <string name="left_strategy">我的攻略</string>
    <string name="left_message">消息管理</string>
    <string name="left_setting">设置</string>
    <string name="left_update_version">更新版本</string>
    <string name="left_opinion">意见反馈</string>
    <string name="left_about">关于游乐</string>
    <string name="left_logout">注销</string>
    <string name="left_exit">退出</string>
    <string name="left_comment_function">常用功能</string>
    <string name="left_more">更多功能</string>
    <string name="news">新闻</string>
    <string name="gift">礼包</string>
    <string name="strategy">攻略</string>
    <string name="not_login">未登录</string>
    <string name="not_login_tip">点击登录，享更多特权</string>
    <string name="theme">专题</string>
    <string name="commnity">论坛</string>
    <string name="last_news">头条</string>
    <string name="last_them">最新专题</string>
    <string name="week_choice">每周精选</string>
    <string name="hot_game">热门游戏</string>
    <string name="installed">已安装</string>
    <string name="canUpdate">可升级</string>
    <string name="downloadManger">下载管理</string>
    <string name="allCheck">全选</string>
    <string name="allup">批量升级</string>
    <string name="alldelete">批量删除</string>
    <string name="alluninstall">批量卸载</string>
    <string name="game_manager">游戏管理</string>
    <string name="acceptMessage">接受推送消息</string>
    <string name="autoInstall">下载后自动安装</string>
    <string name="set_delete_after_install">安装后删除安装包</string>
    <string name="voice_tip">提示音效</string>
    <string name="autoUpdate">自动更新版本</string>
    <string name="set_clean_cache">启动清除缓存</string>
    <string name="set_cach_lost">流量监控</string>
    <string name="set_showImage">显示图片</string>
    <string name="look">查看</string>
    <string name="about_game">相关游戏</string>
    <string name="active_code">激活码:</string>
    <string name="copy">复制</string>
    <string name="allInstall">全部安装</string>
    <string name="other_theme">其它专题</string>
    <string name="like">猜你喜欢</string>
    <string name="hot_gitf">热门礼包</string>
    <string name="gift_number">礼包数:</string>
    <string name="lingqu">领取</string>
    <string name="lingqu_go">去领取</string>
    <string name="lingqu_no">领光了</string>
    <string name="lingqued">已领</string>
    <string name="get_gift">领取礼包</string>
    <string name="time_out">过期</string>
    <string name="not_start">未开启</string>
    <string name="find_game">找游戏</string>
    <string name="find_gonglue">找攻略</string>
    <string name="find_gift">找礼包</string>
    <string name="hot_serch">热门搜索</string>
    <string name="message_manager">消息管理</string>
    <string name="news_phone_game">手游新闻</string>
    <string name="sigle_score"><Data><![CDATA[ <font color="#33ce16">%1$d</font> ]]> </Data>积分</string>
    <string name="gonglue_number_format">有<Data><![CDATA[ <font color="#ff9600">%1$s</font> ]]> </Data>条攻略</string>
    <string name="gonglue_number_format1">攻略:<Data><![CDATA[ <font color="#ff9600">%1$s</font> ]]> </Data>篇</string>
    <string name="gonglue_number_format2">共有<Data><![CDATA[ <font color="#ff9600">%1$s</font> ]]> </Data>条攻略</string>
    <string name="gift_number_format1">礼包数:<Data><![CDATA[ <font color="#ff9600">%1$s</font> ]]> </Data></string>
    <string name="gift_number_format2">共有<Data><![CDATA[ <font color="#ff9600">%1$s</font> ]]> </Data>个礼包</string>
    <string name="gift_number_format3">剩下<Data><![CDATA[ <font color="#ff9600">%1$d</font> ]]> </Data>份</string>
    <string name="left_cach_format"><Data><![CDATA[ <font color="#999999">%1$s</font><font color="#666666">/%2$s</font> ]]> </Data></string>
    <string name="message_reply_format"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>回复了：\"%2$s\"%3$s</string>
    <string name="message_voice_reply"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>回复了：\"%2$s\"%3$s</string>
    <string name="message_comment_fomat"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>评论了：\"%2$s\"%3$s </string>
    <string name="message_bord_fomat"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>给你留言了。</string>
    <string name="message_bord_reply_fomat"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>回复了你的留言：\"%2$s\"%3$s</string>
    <string name="message_like_fomat"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> ]]> </Data>给你的动态：\"%2$s\" 点赞了</string>
    <string name="message_private_fomat"><Data><![CDATA[ <font color="#2aa6d3">%1$s</font> 对<hold>您</hold> ]]>说：%2$s </Data></string>
    <string name="message_private_fomat1"><Data><![CDATA[ <hold>您</hold>对<font color="#2aa6d3">%1$s</font>  ]]>说：%2$s </Data></string>
    <string name="dy_reply_format"><Data><![CDATA[ <font color="#30a6d3">%1$s</font> 回复 <font color="#30a6d3">%2$s</font> ]]> </Data>:</string>
    <string name="zhuang_qu">专区</string>
    <string name="open">打开</string>
    <string name="get_gift_time">领取时间：</string>
    <string name="user_gift_time">兑换期限：</string>
    <string name="gift_content">礼包内容：</string>
    <string name="gift_condition">领取条件：</string>
    <string name="use_method">使用方法：</string>
    <string name="serch">搜索</string>
    <string name="input_not_nul">搜索内容不能为空</string>
    <string name="tost_gift_has_got">曾经领取过，不能重复领取</string>
    <string name="tost_gift_has_no">领取完毕</string>
    <string name="tost_gift_time_out">已经过期</string>
    <string name="tost_gift_not_open">没开启</string>
    <string name="tost_gift_get_success">领取成功</string>
    <string name="mail_feedback">请输入您的邮箱</string>
    <string name="hint_feedback">请对问题描述，我们会更快的发现和解决问题</string>
    <string name="submit">提交</string>
    <string name="feedback_describe">意见描述</string>
    <string name="feedback_email">（非必填项，方便我们及时给你反馈结果）</string>
    <string name="phone_cach">手机内存</string>
    <string name="sdcard_cach">存储卡</string>
    <string name="download">下载</string>
    <string name="pingfen">评分</string>
    <string name = "install">安装</string>
    <string name="tost_comment_success">发表评论成功</string>
    <string name="tost_comment_fail">发表失败</string>
    <string name="delete">删除</string>
    <string name="cancelPraise">取消赞成功</string>
    <string name="praise_success">点赞成功</string>
    <string name="cancel">取消</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="name_length">昵称不能超过16个字</string>
    <string name="comment_not_null">评论内容不能为空</string>
    <string name="name_title_format">%1$s的主页</string>
    <string name="modyfy_title_format">修改%1$s</string>
    <string name="net_error_try_again">网络链接失败,点击重试</string>
    <string name="save_avata_fail">保存头像失败</string>
    <string name="cant_down">暂时不能下载该游戏</string>
    <string name="logining">正在登录</string>
    <string name="qq_tip">输入的QQ号必须为6到15位的纯数字</string>
    <string name="allDown">全部下载</string>
    <string name="serch_no_data">搜索到0结果</string>
    <string name="is_last_version">当前版本已经是最新版本</string>
    <string name="board_success">留言成功</string>
    <string name="boad_msg_not_null">留言内容不能为空</string>
    <string name="recoding">正在录音......</string>
    <string name="see_more">展开</string>
    <string name="parise_format"><Data><![CDATA[ <b>%1$s</b> ]]></Data>等%2$d人觉得很赞</string>
    <string name="update_tip">更新提示</string>
    <string name="isLast">已是最新版本</string>
    <string name="sure">确定</string>
    <string name="after_while">稍后再说</string>
    <string name="no_select">没有选择游戏</string>
    <string name="fold">缩起</string>
    <string name="logout_ing">正在注销</string>
    <string name="press_say">按住说话</string>
    <string name="send">发送</string>
    <string name="myStagry">我的攻略</string>
    <string name="re_down">重试</string>
    <string name="input_game_name">请输入游戏名称</string>
    <array name="classfy">
        <item>游戏分类</item>
        <item>标签分类</item>
    </array>
    <array name="rank_game">
        <item>总榜</item>
        <item>新榜</item>
        <item>周榜</item>
        <item>月榜</item>
    </array>
    <array name="gift_tab">
        <item>礼包推荐</item>
        <item>所有礼包</item>
        <item>我的礼包</item>
    </array>
    <array name="gonglue_tab">
        <item>攻略推荐</item>
        <item>我的攻略</item>
    </array>
    <array name="message_tab">
        <item>系统</item>
        <item>活动</item>
        <item>礼包</item>
        <item>论坛</item>
        <item>互动</item>
    </array>
    <!--bind tag name-->
    <string name="d_tag">dytag</string>
    <string name="c_tag">cytag</string>
    <string name = "bean">bean</string>
    <string name="tag">tag</string>
    <string name="uninstall">卸载</string>
    <string name="update">升级</string>
    <string name="account">账号：</string>
    <string name="nick_name">昵称：</string>
    <string name="email">邮箱：</string>
    <string name="safe">安全：</string>
    <string name="modify_password">修改密码及密保</string>
</resources>
