<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/default_title_layout" 
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_describe"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/feedback_black"/>
        
        <EditText
            android:id="@+id/feedback_et"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/intro_bg"
            android:paddingTop="8.0dp"
            android:paddingLeft="8.0dp"
            android:gravity="top"
            android:maxLength="300"
            android:hint="@string/hint_feedback"
            android:textColor="@color/black"
            android:textColorHint="#A4A4A4"
            android:textSize="13sp" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">
            
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/feedback_black"
            />
            
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_email"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textColor="@color/gray_1"/>
        </LinearLayout>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLength="100"
            android:background="@drawable/intro_bg"
            android:gravity="center_vertical"
            android:paddingLeft="8.0dp"
            android:hint="@string/mail_feedback"
             android:textColor="@color/black"
            android:textColorHint="#A4A4A4"
            android:singleLine="true"
            android:textSize="13sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="10.0dip"
            android:background="#ff7100"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
       
    </LinearLayout>

</LinearLayout>