<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
            layout="@layout/default_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

    <RelativeLayout
            style="@style/app_edge"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/acceptMessage"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/acceptMessage"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            style="@style/app_edge"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/autoInstall"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/autoInstall"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            style="@style/app_edge"
            android:background="@color/setting_bg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/set_delete_after_install"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/deleteInstalled"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:background="@color/setting_bg"
            style="@style/app_edge"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/voice_tip"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/voice"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            style="@style/app_edge"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/autoUpdate"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/autoUpdate"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            style="@style/app_edge"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/set_clean_cache"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/cleanCache"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:visibility="gone"
            style="@style/app_edge"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/set_cach_lost"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/cashLost"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            style="@style/app_edge"
            android:background="@color/setting_bg"
            android:layout_height="@dimen/set_item_height">

        <TextView
                android:text="@string/set_showImage"
                style="@style/setting_text_style"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/showImage"
                style="@style/setting_check_style"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
            android:layout_width="match_parent"
            android:src="@color/line_gray"
            android:scaleType="centerCrop"
            android:layout_height="1px"/>
</LinearLayout>